<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Epub LIte</string>
    <string name="action_settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="prefdesc">Settings for use of EpubLite</string>
    <string name="preftitle">Display and Navigation</string>
    <string name="lastpositiontitle">Save Last Position</string>
    <string name="lastpositionsummary">Open at last chapter you were on</string>
    <string name="keepscreenon_summary">Keep the screen on while reading</string>
    <string name="keepscreenon_title">Keep Screen On</string>
    <string name="settings">Reader Settings</string>
    <string name="on_upgrade_error">This should not be called</string>
    <string name="hint">Enter notes here</string>
    <string name="notes">Notes</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="share_title">Share Notes</string>
    <string name="download_update">Update</string>
    <string name="update_title">Epub Lite Update</string>
    <string name="update_description">A new edition of book content</string>
    <string name="update_desc">Click</string>
    <string name="update_complete">Epub Lite Updated!</string>

</resources>